# ConX

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  clean.bat  clean.sh  generate_lua_stub.py
include/: conx.h  conx_2d.h  conx_3d.h  conx_all.h  conx_lua.h  conx_math.h  conx_physics.h
lua_scripts/: example.lua
lua_scripts/game/: main.lua
src/: main.c
src/2d/: conx_2d.c
src/3d/: conx_3d.c
src/core/: conx_all.c  conx_core.c
src/math/: conx_math.c
src/physics/: conx_physics.c
src/scripting/: conx_lua.c
